[tool.poetry]
name = "pystochasticvolatility"
version = "0.1.0"
description = ""
authors = ["Atharv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.9,<3.10"
numpy =  ">=1.20.1,<1.21.0"
numba = { version = ">=0.53.1,<0.54.0", python = ">=3.7.9,<3.10" }
ncephes = ">=1.1.0,<1.2.0"
matplotlib = ">=3.2,<3.5.0"
scipy = ">=1.6.2,<1.7.0"
pandas = ">=1.2.4,<1.3.0"
statsmodels = ">=0.12.2,<0.13.0"
tabulate = ">=0.8.9,<0.9.0"
prettytable = ">=2.4.0,<2.5.0"
setuptools = ">=52.0.0,<52.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
